# backend/app/admin/service/cmd/server/wire_gen.go
@@ -110,13 +110,15 @@ func initApp(context *bootstrap.Context) (*kratos.App, func(), error) {
 	dataAccessAuditLogService := service.NewDataAccessAuditLogService(context, dataAccessAuditLogRepo)
 	redisCacheMonitorRepo := data.NewRedisCacheMonitorRepo(context, client)
 	redisCacheMonitorService := service.NewRedisCacheMonitorService(context, redisCacheMonitorRepo)
+	dashboardRepo := data.NewDashboardRepo(context, entClient)
+	dashboardService := service.NewDashboardService(context, dashboardRepo)
 	internalMessageRepo := data.NewInternalMessageRepo(context, entClient)
 	internalMessageCategoryRepo := data.NewInternalMessageCategoryRepo(context, entClient)
 	internalMessageRecipientRepo := data.NewInternalMessageRecipientRepo(context, entClient)
 	internalMessageService := service.NewInternalMessageService(context, internalMessageRepo, internalMessageCategoryRepo, internalMessageRecipientRepo, userRepo, authenticator, clientType)
 	internalMessageCategoryService := service.NewInternalMessageCategoryService(context, internalMessageCategoryRepo)
 	internalMessageRecipientService := service.NewInternalMessageRecipientService(context, internalMessageRepo, internalMessageRecipientRepo)
-	httpServer, err := server.NewRestServer(context, v, authorizerAuthorizer, authenticationService, loginPolicyService, adminPortalService, taskService, fileService, fileTransferService, dictTypeService, dictEntryService, languageService, tenantService, userService, userProfileService, roleService, positionService, orgUnitService, menuService, apiService, permissionService, permissionGroupService, permissionAuditLogService, policyEvaluationLogService, loginAuditLogService, apiAuditLogService, operationAuditLogService, dataAccessAuditLogService, redisCacheMonitorService, internalMessageService, internalMessageCategoryService, internalMessageRecipientService)
+	httpServer, err := server.NewRestServer(context, v, authorizerAuthorizer, authenticationService, loginPolicyService, adminPortalService, taskService, fileService, fileTransferService, dictTypeService, dictEntryService, languageService, tenantService, userService, userProfileService, roleService, positionService, orgUnitService, menuService, apiService, permissionService, permissionGroupService, permissionAuditLogService, policyEvaluationLogService, loginAuditLogService, apiAuditLogService, operationAuditLogService, dataAccessAuditLogService, redisCacheMonitorService, dashboardService, internalMessageService, internalMessageCategoryService, internalMessageRecipientService)
 	if err != nil {
 		cleanup2()
 		cleanup()
